Revision history for {{$dist->name}}

{{$NEXT}}
        - [License] can be given a filename option to use instead of LICENSE

5.037     2015-06-04 21:46:38-04:00 America/New_York
        - issue a warning when version ranges are passed through to
          ExtUtils::MakeMaker, which cannot parse them and treats them as '0'
          https://github.com/Perl-Toolchain-Gang/ExtUtils-MakeMaker/issues/215

        - added %P formatter code to [NextRelease] for the releaser's PAUSE id

5.036     2015-05-02 11:08:51-04:00 America/New_York
        - BUGFIX: detection of trial status via underscore in version was
          accidentally lost in v5.035; restored now!

5.035     2015-04-16 15:43:26+02:00 Europe/Berlin
        - BREAKING CHANGE: is_trial is now read-only
        - release_status is a new Dist::Zilla attribute and
          ReleaseStatusProvider plugin role

5.034     2015-03-20 10:57:07-04:00 America/New_York
        - require new Config::MVP for better exceptions (that we rely on)
        - point to IRC in dist metadata

5.033     2015-03-17 07:45:36-04:00 America/New_York
        - NextRelease now bases the new file on disk on the original file on
          disk, skipping any munging that happened in between
        - improve error message when a plugin can't be loaded
        - added "use_begin" option to PkgVersion

5.032     2015-02-21 09:36:00-05:00 America/New_York
        - when :version is in plugin config, it's now enforced as soon as it's
          seen
        - add more documentation about bytes/text files
        - PruneCruft also prunes _eumm/* now

5.031     2015-01-08 22:04:30-05:00 America/New_York
        - correct a test to avoid testing symlinks on Win32

5.030     2015-01-04 22:31:38-05:00 America/New_York
        - fixed [GatherDir]'s handling of symlinks to directories
        - [AutoPrereqs] now filters out all namespaces found in contained
          modules, not just the one corresponding to the module filename
