@@ -2,6 +2,8 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
         - [License] can be given a filename option to use instead of LICENSE
+        - dzil listdeps --develop now exists as an alias for dzil listdeps
+          --author (Karen Etheridge)
 
 5.037     2015-06-04 21:46:38-04:00 America/New_York
         - issue a warning when version ranges are passed through to
